[package]
name = "tacacsrs-networking"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
tokio = { version = "1.40.0", features = ["full"] }
tacacsrs-messages = { path = "../tacacsrs_messages" }
async-trait = "0.1.82"
rand = "0.8.5"
log = "0.4.22"

[dev-dependencies]
console-subscriber = "0.4.0"
