[package]
name = "tacacsrs-networking"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
tokio = { version = "1.40.0", features = ["full"] }
tacacsrs-messages = { path = "../tacacsrs_messages" }
async-trait = "0.1.82"
rand = "0.8.5"
log = "0.4.22"
tokio-rustls = { version = "0.26.0", default-features = false, features = ["aws_lc_rs", "logging"] }
rustls-pki-types = "1.8.0"
rustls-cert-file-reader = "0.4.0"

[dev-dependencies]
argh = "0.1.12"
console-subscriber = "0.4.0"
rustls-pemfile = "2.1.3"
webpki-roots = "0.26.6"
test-log = "0.2.16"
env_logger = "0.11.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
